libview: Ctrl+mouse wheel zoom should be pointer-centered, not window-centered

https://bugzilla.gnome.org/show_bug.cgi?id=731669